--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,9 +1,13 @@
 <h2>Sign up</h2>
-
+<div class="container">
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
+    <%= f.input :username,
+                required: true,
+                autofocus: true ,
+                input_html: { autocomplete: "username" }%>
     <%= f.input :email,
                 required: true,
                 autofocus: true ,
@@ -15,6 +19,36 @@
     <%= f.input :password_confirmation,
                 required: true,
                 input_html: { autocomplete: "new-password" } %>
+    <%= f.input :beginweek, collection: ["lundi", "mardi", "mercredi", "jeudi", "vendredi", "samedi", "dimanche"],
+                label: "Ma semaine démarre le :";
+
+                %>
+                <%= f.input :groceryshopping, collection: ["lundi", "mardi", "mercredi", "jeudi", "vendredi", "samedi", "dimanche"],
+                label: "Je fais mes courses le :";
+                %>
+
+                <div>
+                <p>Je planifie mes repas pour : </p>
+                <input type="checkbox" name="breakfast" id="breakfast" />
+                <label for="breakfast">Petit déjeuner</label>
+                <input type="checkbox" name="lunch" id="lunch" />
+                <label for="lunch">Déjeuner</label>
+                <input type="checkbox" name="collation" id="collation" />
+                <label for="collation">Gouter</label>
+                <input type="checkbox" name="dinner" id="dinner" />
+                <label for="dinner">Diner</label>
+              </div>
+
+              <div>
+                <p>En général, je cuisine :</p>
+                <input type="checkbox" name="starter" id="starter" />
+                <label for="starter">Entrée</label>
+                <input type="checkbox" name="maincourse" id="maincourse" />
+                <label for="maincourse">Plat</label>
+                <input type="checkbox" name="dessert" id="dessert" />
+                <label for="dessert">Dessert</label>
+
+              </div>
   </div>
 
   <div class="form-actions">
@@ -23,3 +57,4 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
