--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,7 +1,9 @@
 /* Main navbar */
-.navbar-wagon {
-  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
-  background: white;
+.navbar-batchka {
+  background: #9dba9a;
+  width: 90%;
+  position: fixed;
+  top: 0%;
   transition: all 0.3s ease;
   height: 70px;
   padding: 0px 30px;
@@ -11,47 +13,62 @@
 }
 
 /* Logo */
-.navbar-wagon-brand img {
+.navbar-batchka-brand img {
   height: 50px;
 }
 
 /* User Avatar */
-.navbar-wagon .avatar {
+.navbar-batchka .avatar {
   height: 35px;
   width: 35px;
   border-radius: 50%;
 }
 
 /* Right section */
-.navbar-wagon-right {
+.navbar-batchka-right {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
 /* Basic navbar item */
-.navbar-wagon-item {
+.navbar-batchka-item {
   cursor: pointer;
-  padding: 0 20px;
+  padding: 0;
 }
 
 /* Navbar link */
-.navbar-wagon-link {
+.navbar-batchka-link {
   color: #616668;
   font-size: 14px;
 }
-.navbar-wagon-link:hover {
+.navbar-batchka-link:hover {
   color: #da552f;
   text-decoration: none;
 }
 
 /* Dropdown menu */
-.navbar-wagon-dropdown-menu {
+.navbar-batchka-bottom {
+  width: 100%;
+  margin-left: 0px;
+  margin-right: 0px;
+  background: #9dba9a;
+  transition: all 0.3s ease;
+  height: 40px;
+  padding: 0px 30px;
+  display: flex;
+  align-items: start;
+  justify-content: right;
+  position: fixed;
+  bottom: 0%;
+  z-index: 9;
+}
+.navbar-batchka-dropdown-menu {
   margin-top: 15px;
   box-shadow: 1px 1px 4px #E6E6E6;
   border-color: #E6E6E6;
 }
-.navbar-wagon-dropdown-menu li > a {
+.navbar-batchka-dropdown-menu li > a {
   transition: color 0.3s ease;
   font-weight: lighter !important;
   color: #999999 !important;
@@ -59,17 +76,17 @@
   line-height: 22px !important;
   padding: 10px 20px;
 }
-.navbar-wagon-dropdown-menu li > a:hover {
+.navbar-batchka-dropdown-menu li > a:hover {
   background: transparent !important;
   color: black !important;
 }
-.navbar-wagon-dropdown-menu:before {
+.navbar-batchka-dropdown-menu:before {
   content: ' ';
   height: 10px;
   width: 10px;
   position: absolute;
   right: 10px;
-  top: -6px;
+  top: 6px;
   background-color: white;
   transform: rotate(45deg);
   border-left: 1px solid #E6E6E6;
