--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -53,8 +53,7 @@
       <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
       <ul class="dropdown-menu dropdown-menu-right navbar-batchka-dropdown-menu">
       <li><%= link_to "Mon menu de la semaine", menus_path %></li>
-      <li><%= link_to "Ma liste de choses à préparer", menu_todos_path(menu) %></li>
-      <li><%= link_to "Ma liste de courses", menu_ingredients_path(menu) %></li>
+
       <li><%= link_to "Editer mon profil", edit_user_registration_path %></li>
       <li><%= link_to "Me déconnecter", destroy_user_session_path %></li>
     </ul>
@@ -72,3 +71,5 @@
   </div>
 </div>
 
+<!--  <li>< %= link_to "Ma liste de choses à préparer", menu_todos_path(@menu.id) %></li>
+      <li>< %= link_to "Ma liste de courses", menu_ingredients_path(@menu.id) %></li> -->
