--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -21,8 +21,7 @@
     <p>Gagner du temps, moins gaspiller, et surtout, ne plus se casser la tête tous les soirs.</p>
 
     <h2>Concrétement, ça ressemble à :</h2>
-    <ul>
-      <li>un menu</li>
+    <ul><li>un menu</li>
       <li>une liste de courses</li>
       <li>une to-do list</li></ul>
 
