--- a/app/views/menus/show.html.erb
+++ b/app/views/menus/show.html.erb
@@ -1,2 +1,7 @@
 <h1>Menus#show</h1>
 <p>Find me in app/views/menus/show.html.erb</p>
+
+<%= @menu.startdate %>
+<p>Menu du </p>
+
+<%= @menu.weekof %>
