--- a/app/views/menus/index.html.erb
+++ b/app/views/menus/index.html.erb
@@ -1,4 +1,9 @@
 <h1>Menus#index</h1>
 <p>Find me in app/views/menus/index.html.erb</p>
 
+<% @menu.each do |m| %>
+  <p> <%= m.startdate %> - <%= m.season %></p>
+<% end %>
+
+
 <%= link_to "Créer mon nouveau menu", new_menu_path  %>
