--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar-batchka">
   <!-- Logo -->
   <%= link_to root_path, class: "navbar-batchka-brand" do %>
-    <%= image_tag "logo.png", height: 50 %>
+    <%= image_tag "https://www.joliesdates.fr/wp-content/uploads/2018/02/Fichier-4.png", height: 50 %>
   <% end %>
 
   <!-- Right Navigation -->
@@ -10,28 +10,26 @@
     <% if user_signed_in? %>
 
       <!-- Links when logged in -->
-      <%= link_to "Host", "#", class: "navbar-batchka-item navbar-batchka-link" %>
-      <%= link_to "Trips", "#", class: "navbar-batchka-item navbar-batchka-link" %>
-      <%= link_to "Messages", "#", class: "navbar-batchka-item navbar-batchka-link" %>
+      <%= link_to "Mes menus", menus_path, class: "navbar-batchka-item navbar-batchka-link" %>
 
       <!-- Avatar with dropdown menu -->
       <div class="navbar-batchka-item">
         <div class="dropdown">
-          <%= image_tag "http://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbar-batchka-menu", "data-toggle" => "dropdown" %>
+          <%= image_tag "https://avatars0.githubusercontent.com/u/42960291?s=460&v=4", class: "avatar dropdown-toggle", id: "navbar-batchka-menu", "data-toggle" => "dropdown" %>
           <ul class="dropdown-menu dropdown-menu-right navbar-batchka-dropdown-menu">
             <li>
-              <%= link_to "#" do %>
-                <i class="fa fa-user"></i> <%= t(".profile", default: "Profile") %>
+              <%= link_to menus_path do %>
+                <i class="fa fa-user"></i> <%= t(".profile", default: "Mes menus") %>
               <% end %>
             </li>
             <li>
-              <%= link_to "#" do %>
-                <i class="fa fa-cog"></i>  <%= t(".settings", default: "Settings") %>
+              <%= link_to edit_user_registration_path do %>
+                <i class="fa fa-cog"></i>  <%= t(".settings", default: "Editer mon profil") %>
               <% end %>
             </li>
             <li>
               <%= link_to destroy_user_session_path, method: :delete do %>
-                <i class="fa fa-sign-out"></i>  <%= t(".sign_out", default: "Log out") %>
+                <i class="fa fa-sign-out"></i>  <%= t(".sign_out", default: "Me déconnecter") %>
               <% end %>
             </li>
           </ul>
@@ -39,7 +37,7 @@
       </div>
     <% else %>
       <!-- Login link (when logged out) -->
-      <%= link_to t(".sign_in", default: "Login"), new_user_session_path, class: "navbar-batchka-item navbar-batchka-link" %>
+      <%= link_to t(".sign_in", default: "Se connecter"), new_user_session_path, class: "navbar-batchka-item navbar-batchka-link" %>
     <% end %>
   </div>
 </div>
