to do list, grocery list and menu creation. + sign up form functional

--- a/app/views/days/show.html.erb
+++ b/app/views/days/show.html.erb
@@ -10,3 +10,6 @@
      <% end %></p>
    <% end %>
  <% end %>
+
+<%= link_to "Vue de la semaine", menu_path(id: @menu.id) %>
+<%= link_to "Créer mes listes", menu_ingredients_path(menu_id: @menu.id)  %>
