--- a/app/views/days/index.html.erb
+++ b/app/views/days/index.html.erb
@@ -1,3 +1,22 @@
 <h1>Day#index</h1>
 <p>Find me in app/views/day/index.html.erb</p>
 
+<h3>Mon menu</h3>
+
+
+<% @days.each do |day| %>
+  <p> <%= day.weekday %> :
+  <% day.repas.each do |repa| %>
+    <%= repa.repastype %> -
+    <% repa.plats.each do |plat| %>
+      <%= plat.name %>
+    <% end %>
+  <% end %> </p>
+<% end %>
+
+
+
+
+<%= link_to "Mon menu", menu_days_path(menu_id: @menu.id) %>
+<%= link_to "Ma liste de courses", menu_repas_path(menu_id: @menu.id) %>
+<%= link_to "Ma todo list", menu_todos_path(menu_id: @menu.id)  %>
