working on css and display in menu and days (index/show/new)

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,6 @@
 /* Main navbar */
 .navbar-batchka {
-  background: #9dba9a;
+  background: transparent;
   width: 90%;
   position: fixed;
   top: 0%;
@@ -52,7 +52,7 @@
   width: 100%;
   margin-left: 0px;
   margin-right: 0px;
-  background: #9dba9a;
+  background: transparent;
   transition: all 0.3s ease;
   height: 40px;
   padding: 0px 30px;
