--- a/app/views/ingredients/index.html.erb
+++ b/app/views/ingredients/index.html.erb
@@ -1,31 +1,56 @@
-<h1>Ingredient#index</h1>
-<p>Je suis dans ingredients index</p>
+<div class="container">
+  <h1>Ingredient#index</h1>
 
+  <h2>Mes ingrédients</h2>
+  <div class="row">
+    <% @ingredients.each do |i| %>
+      <div class="col-xs-6 col-sm-3">
+        <div class="card">
+          <%= simple_form_for([i.plat, i], url: menu_day_repa_plat_ingredient_path(menu_id: @menu.id, day_id: i.plat.repa.day.id, repa_id: i.plat.repa.id, plat_id: i.plat.id, id: i.id), method: :put, remote: true) do |f| %>
+            <div class="inline-form">
+              <%= f.input :instock, label: false %>
+              <%= f.input :name, label: false %>
+              <div class="display_edit_ingredient">
+                <div class="button_edit_ingredient">
+                  <i class="fas fa-pencil-alt"></i>
+                </div>
 
-<h2>Mes ingrédients</h2>
-<% @ingredients.each do |i| %>
-  <%= i.name %>
+                <div class="form_edit_ingredient">
+                  <%= f.input :ingredienttype, label: false, placeholder: "Type d'ingrédient", collection: ["Légumes", "Fruits", "Féculents", "Protéines", "Epicerie"]%>
+                  <div class="row">
+                    <div class="col-xs-6">
+                      <%= f.input :quantity, label: false, placeholder: "Quantité" %>
+                    </div>
+                    <div class="col-xs-6">
+                      <%= f.input :unity, label: false, placeholder: "Unité" %>
+                    </div>
+                  </div>
+                </div>
+              </div>
+<%= button_tag type: 'submit', class: "submit-buttons" do %>
+                <i class="fas fa-check"></i>
+              <% end %>
 
-  <%= simple_form_for([i.plat, i], url: menu_day_repa_plat_ingredient_path(menu_id: @menu.id, day_id: i.plat.repa.day.id, repa_id: i.plat.repa.id, plat_id: i.plat.id, id: i.id), method: :put) do |f| %>
-    <%= f.input :name %>
-    <%= f.input :instock %>
-    <%= f.button :submit %>
-  <% end %>
+            </div>
+          <% end %>
 
-  <%= simple_form_for([@menu, @todo], url: menu_todos_path(menu_id: @menu.id)) do |f| %>
+          <%= simple_form_for([@menu, @todo], url: menu_todos_path(menu_id: @menu.id)) do |f| %>
 
-    <%= f.hidden_field :ingredient_id, value: i.id %>
-    <%= f.hidden_field :menu_id, value: @menu.id %>
-    <%= f.input :actionverb, collection: ["Eplucher", "Couper", "Cuire", "Réchauffer", "Rotir", "Poeler"] %>
-    <%= f.input :daydue, collection: ["Lundi", "Mardi", "Mercredi", "Jeudi", "Vendredi", "Samedi"] %>
-    <%= f.input :comments %>
-    <%= f.button :submit %>
-  <% end %>
+            <%= f.hidden_field :ingredient_id, value: i.id %>
+            <%= f.hidden_field :menu_id, value: @menu.id %>
+            <%= f.input :actionverb, collection: ["Eplucher", "Couper", "Mixer", "Cuire", "Réchauffer", "Rotir", "Poeler"] %>
+            <%= f.input :daydue, collection: ["Lundi", "Mardi", "Mercredi", "Jeudi", "Vendredi", "Samedi"] %>
+            <%= f.input :comments %>
+            <%= f.button :submit %>
+          <% end %>
+        </div>
+      </div>
+    <% end %>
+  </div>
 
-<% end %>
-
-<%= link_to "Mon menu", menu_days_path(menu_id: @menu.id) %>
-<%= link_to "Ma liste de courses", menu_repas_path(menu_id: @menu.id) %>
-<%= link_to "Ma todo list", menu_todos_path(menu_id: @menu.id)  %>
-<br>
-<%= link_to "Retour", menu_path(@menu) %>
+  <%= link_to "Mon menu", menu_days_path(menu_id: @menu.id) %>
+  <%= link_to "Ma liste de courses", menu_repas_path(menu_id: @menu.id) %>
+  <%= link_to "Ma todo list", menu_todos_path(menu_id: @menu.id)  %>
+  <br>
+  <%= link_to "Retour", menu_path(@menu) %>
+</div>
