--- a/app/views/menus/show.html.erb
+++ b/app/views/menus/show.html.erb
@@ -23,7 +23,9 @@
 
             <div class="repa_detail">
                 <% repa.plats.each do |plat| %>
+                  <%= link_to menu_day_repa_plat_path(menu_id: @menu.id,day_id: plat.repa.day.id ,repa_id:plat.repa.id, id: plat.id) do %>
                   <%= plat.name %>
+                  <% end %>
                 <% end %>
             </div>
             </div>
