--- a/app/views/plats/show.html.erb
+++ b/app/views/plats/show.html.erb
@@ -1,30 +1,31 @@
+<div class="container">
 <h1>Plats#show</h1>
-<p>T'es dans plat</p>
 
-<%= simple_form_for([@menu, @plat], url: menu_day_repa_plat_path(menu_id: @menu.id, day_id: @day.id, repa_id: @repa.id, id: @plat.id), method: :put) do |f| %>
-    <h2>Intitulé du plat</h2>
-    <%= f.input :name %>
-    <%= f.button :submit %>
+<div class="edit_platname">
+<%= simple_form_for([@menu, @plat], url: menu_day_repa_plat_path(menu_id: @menu.id, day_id: @day.id, repa_id: @repa.id, id: @plat.id), method: :put, remote: true) do |f| %>
+  <div class="form_platname form-inline">
+    <%= f.input :name, label: false %>
+
+    <%= button_tag type: 'submit', class: "submit-buttons" do %>
+        <i class="fas fa-check"></i>
+    <% end %>
+    </div>
+</div>
+
 <% end %>
 
+
 <h2>Ingredients principaux : </h2>
-<ul>
+<ul id="ingredients">
 <% @plat.ingredients.each do |ingredient| %>
-  <li> <%= ingredient.name %> </li>
+  <%= render 'ingredients/show', ingredient: ingredient %>
 <% end %>
 </ul>
 
 
 <h2>Ajouter un nouvel ingrédient : </h2>
-  <%= simple_form_for([@plat, @ingredient], url: menu_day_repa_plat_ingredients_path(menu_id: @menu.id, day_id: @day.id, repa_id: @repa.id, plat_id: @plat.id), method: :post) do |f| %>
-
-    <%= f.input :name %>
-    <%= f.input :quantity %>
-    <%= f.input :ingredienttype %>
-    <%= f.input :instock %>
-    <%= f.hidden_field :plat_id, value: @plat.id %>
-    <%= f.button :submit %>
-  <% end %>
+<%= render 'ingredients/form', menu_id: @menu.id, day_id: @day.id, repa_id: @repa.id, id: @plat.id %>
 
 <%= link_to "Retour", menu_day_path(menu_id: @menu.id, id: @day.id)  %>
 <%= link_to "Créer mes listes", menu_ingredients_path(menu_id: @menu.id)  %>
+</div>
