--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -1,15 +1,30 @@
+
+<div class="container">
 <h1>Todos#index</h1>
 <p>Find me in app/views/todos/index.html.erb</p>
 
 <h3>Ma to do list</h3>
 
-<% @todos.each do |todo| %>
-  <p> <%= todo.actionverb %> <%= todo.ingredient.name %> : <%= todo.daydue %>  </p>
-  <p> <%= todo.comments %></p> <br>
-<% end %>
+<% @menu.days.each do |day| %>
+  <h3> <%= day.weekday %> </h3>
+  <% @todos.each do |todo| %>
+    <% if day.weekday == todo.daydue %>
+    <%= simple_form_for([@menu, todo], url: menu_todo_path(menu_id: @menu.id, id: todo.id), method: :put, remote: true) do |f| %>
+    <div class="form-inline">
+    <%= f.input :done, class: "done_todo", label: false %>
+    <%= todo.actionverb %> <%= todo.ingredient.name %> <%= todo.comments %>
+    <%= button_tag type: 'submit', class: "submit-buttons" do %>
+        <i class="fas fa-check"></i>
+    <% end %>
+    </div>
+  <% end %>
+    <% end %>
+  <% end %>
 
+<% end %>
 
 
 <%= link_to "Mon menu", menu_days_path(menu_id: @menu.id) %>
 <%= link_to "Ma liste de courses", menu_repas_path(menu_id: @menu.id) %>
 <%= link_to "Ma todo list", menu_todos_path(menu_id: @menu.id)  %>
+</div>
