--- a/app/views/ingredients/index.html.erb
+++ b/app/views/ingredients/index.html.erb
@@ -2,8 +2,10 @@
   <h1>Ingredient#index</h1>
 
   <h2>Mes ingrédients</h2>
+  <% @menu.days.each do |day| %>
+  <h4><%= day.weekday %></h4>
   <div class="row">
-    <% @ingredients.each do |i| %>
+    <% day.ingredients.each do |i| %>
       <div class="col-xs-6 col-sm-3 ingredient-card">
         <div class="edit-ingredient form-group">
           <%= simple_form_for([i.plat, i], url: menu_day_repa_plat_ingredient_path(menu_id: @menu.id, day_id: i.plat.repa.day.id, repa_id: i.plat.repa.id, plat_id: i.plat.id, id: i.id), method: :put, remote: true) do |f| %>
@@ -49,7 +51,7 @@
               <%= f.input :actionverb, collection: ["Eplucher", "Couper", "Mixer", "Cuire", "Réchauffer", "Rotir", "Poeler"] %>
             </div>
             <div class="col-xs-5">
-              <%= f.input :daydue, collection: ["Lundi", "Mardi", "Mercredi", "Jeudi", "Vendredi", "Samedi"] %>
+              <%= f.input :daydue, collection: ["Lundi", "Mardi", "Mercredi", "Jeudi", "Vendredi", "Samedi", "Dimanche"] %>
             </div>
             <%= f.input :comments %>
           </div>
@@ -64,6 +66,7 @@
       </div>
     <% end %>
   </div>
+  <% end %>
 
   <%= link_to "Mon menu", menu_days_path(menu_id: @menu.id) %>
   <%= link_to "Ma liste de courses", menu_repas_path(menu_id: @menu.id) %>
