--- a/app/views/repas/index.html.erb
+++ b/app/views/repas/index.html.erb
@@ -1,10 +1,19 @@
+<div class="container">
 <h1>Repas#index</h1>
-<p>Find me in app/views/repas/index.html.erb</p>
 
 <h3>Ma liste de course</h3>
 
 <% @ingredients.each do |ingredient|  %>
-  <p> <%= ingredient.name  %> <%= ingredient.quantity %> </p>
+  <%= simple_form_for([@menu, ingredient], url: menu_day_repa_plat_ingredient_path(menu_id: @menu.id, day_id: ingredient.plat.repa.day.id, repa_id: ingredient.plat.repa.id , plat_id: ingredient.plat.id , id: ingredient.id), method: :put, remote: true) do |f| %>
+    <div class="form-inline">
+    <%= f.input :instock, label: false, class: "done_todo" %>
+    <%= ingredient.name  %> (<%= ingredient.quantity %> - <%= ingredient.plat.name %>)
+    <%= button_tag type: 'submit', class: "submit-buttons" do %>
+        <i class="fas fa-check"></i>
+    <% end %>
+    </div>
+  <% end %>
+
 <% end %>
 
 
@@ -12,3 +21,4 @@
 <%= link_to "Mon menu", menu_days_path(menu_id: @menu.id) %>
 <%= link_to "Ma liste de courses", menu_repas_path(menu_id: @menu.id) %>
 <%= link_to "Ma todo list", menu_todos_path(menu_id: @menu.id)  %>
+</div>
