--- a/app/views/menus/show.html.erb
+++ b/app/views/menus/show.html.erb
@@ -1,34 +1,28 @@
 <div class="container">
   <h1>Menus#show</h1>
 
-  <h4>Semaine du <%= @startday[2] %> / <%= @startday[1] %> / <%= @startday[0] %>  </h2>
+  <h2>Semaine du <%= @startday[2] %> / <%= @startday[1] %> / <%= @startday[0] %>  </h2>
 
 
   <% @days.each do |day| %>
     <div class="menu-week">
 
-      <%= day.weekday %>
-      <%= link_to menu_day_path(menu_id: @menu.id,id: day.id) do  %>
+      <h3> <%= day.weekday %> <%= link_to menu_day_path(menu_id: @menu.id,id: day.id) do  %>
         <i class="fas fa-pencil-alt"></i>
-      <% end %>
-
-      <br>
+      <% end %> </h3>
         <div class="display_all_repas">
           <% day.repas.each do |repa| %>
 
             <div class="display_repa">
-              <div class="repa_name">
-            <%= repa.repastype %>
-              </div>
 
-            <div class="repa_detail">
-                <% repa.plats.each do |plat| %>
+            <%= repa.repastype.upcase %>
+                <% repa.plats.sort{ |x,y| x.id <=> y.id }.each do |plat| %>
                   <div class="edit_platname">
-                    <p> <%= plat.plattype %> : </p>
+
                     <%= simple_form_for([@menu, plat], url: menu_day_repa_plat_path(menu_id: @menu.id, day_id: plat.repa.day.id, repa_id: plat.repa.id, id: plat.id), method: :put, remote: true) do |f| %>
                       <div class="form_platname form-inline">
+                        <span class="plattype-platname">  <%= plat.plattype %></span>
                         <%= f.input :name, label: false %>
-
                         <%= button_tag type: 'submit', class: "submit-buttons" do %>
                           <i class="fas fa-check"></i>
                         <% end %>
@@ -37,12 +31,14 @@
                   </div>
                 <% end %>
             </div>
-            </div>
 
           <% end %>
         </div>
     </div>
   <% end %>
 
+<%= link_to "Créer mes listes", menu_ingredients_path(menu_id: @menu.id)  %>
 <%= link_to "Tous mes menus", menus_path  %>
+<br>
+<p>:)</p>
 </div>
