--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,6 +1,6 @@
 // Specific CSS for your home-page
 body {
-  background-color: #9dba9a;
+  background-color: $green;
 }
 
 .home-page, #home-explanations {
