--- a/app/assets/stylesheets/pages/_menu.scss
+++ b/app/assets/stylesheets/pages/_menu.scss
@@ -1,14 +1,21 @@
  /* menu index */
 
 .lastmenu {
-  border: 3px solid white;
-  border-radius: 2px;
-  margin: 1em 1em;
+  background-color: white;
+  border-radius: 1px;
+  margin-bottom: 10px;
   padding: 1em;
-  height: 15vh;
+  width: 100%;
+  height: 20vh;
+  position: relative;
   p, a, a:hover, a:active, a:target {
     text-decoration: none;
-    color: white;
+    color: $green;
+  }
+  p {
+    height: 60%;
+    text-align: center;
+    padding-top: 10%;
   }
 }
 
@@ -20,6 +27,26 @@
   a {
     color: white;
   }
+}
+
+.links-menu {
+  display: flex;
+  justify-content: space-around;
+  .link-menu1 {
+    font-size : 1em;
+    background-color: $orange;
+    padding: 0.6em;
+    border-radius: 1px;
+  }
+  .link-menu1 i {
+    color: white;
+  }
+}
+
+.menu-editlink {
+  position: absolute;
+  top: 0px;
+  right: 0.3em;
 }
 
  /* menu_new */
